# cpp-project

./: CMakeLists.txt  Doxyfile.in  README.md
app/: main.cpp  qtexample.cpp  qtexample.h  qtexample.ui
include/: Config.h.in
src/: example.cpp
tests/: dummy.cpp
